--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </header>
 <body>
 
-    <h1 style="color: black;background-color: aquamarine; text-align: center; margin: auto;">CNIT 133 Homework</h1>
+    <h1 style="color: black;background-color: aquamarine; text-align: center; margin: auto;">CNIT 133 Homework Main Page</h1>
     <nav>
         <ul>
             <li><a href="homework2/hw2.html">Homework 2</a></li>
