--- a/homework2/extra.html
+++ b/homework2/extra.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Calculator</title>
+    <title>Money Exchange Rates</title>
     <link rel="stylesheet" href="../css/style.css">
     <title>CNIT 133 Homework 2 - Basic Operations</title>
 </head>
