--- a/homework2/hw2.html
+++ b/homework2/hw2.html
@@ -48,6 +48,6 @@
     <h3>part 2</h3>
     <p>Calculates the sum, average, product, smallest, and largest values from three user-input numbers. It validates the inputs to ensure they are numbers and displays an error message if any input is invalid. Results are shown in a textarea with formatted explanations. A clear button resets all input fields and the result display. Event listeners handle button clicks, and event.preventDefault() prevents page refresh on form submission.</p>
     <h3>Extra</h3>
-    <p>Calculator</p>
+    <p>Money Exchange Rates</p>
 </body>
 </html>
